--- a/Twitch.theme.css
+++ b/Twitch.theme.css
@@ -43,7 +43,7 @@
 .theme-dark .chat form {
     box-shadow: none;
 }
-.theme-dark .message-group:not(.has-divider) {
+.theme-dark .dividerEnabled-2TTlcf {
     border-bottom-color: transparent;
 }
 .theme-dark .inner-zqa7da {
@@ -93,7 +93,7 @@
 .theme-dark .iconForeground-1w5n7R {
     fill: white;
 }
-.chat .avatar-large {
+.avatar-17mtNa .large-3ChYtB {
     width: 68px;
     height: 68px;
     background-size: cover;
@@ -161,12 +161,12 @@
 .theme-dark .reaction.reaction-me .reaction-count {
     color: white;
 }
-.small-popout-box {
+.theme-dark .container-3cGP6G {
     background: #482A89;
     border: none;
     border-radius: 0px;
 }
-.option-popout .btn-item:hover {
+.theme-dark .item-2J1YMK:hover {
     color: white;
     cursor: pointer;
 }
@@ -176,7 +176,7 @@
     border-radius: 0px;
     box-shadow: none;
 }
-.theme-dark .message-group h2 .timestamp {
+.theme-dark .timestampCozy-2hLAPV {
     color: silver;
 }
 .theme-dark .separator-2zcjq8 {
@@ -199,14 +199,14 @@
     background-color: rgba(0,0,0,0.4);
 }
 
-.theme-dark .message-group .comment .markup .mention,
-.theme-dark .mention{
+.theme-dark .markup-2BOw-j .mention,
+.theme-dark .isMentioned-N-h9aa .mention, .theme-dark .wrapper-3WhCwL{
     background-color: black !important;
     border: 1px solid #482A89;
     color: white !important;
 }
-.theme-dark .message-group .comment .markup .mention:hover,
-.theme-dark .mention:hover {
+.theme-dark .markup-2BOw-j .mention:hover,
+.theme-dark .isMentioned-N-h9aa .mention:hover, .theme-dark .wrapper-3WhCwL:hover {
     border: 2px solid #482A89;
 }
 .botTagRegular-2HEhHi {
@@ -252,11 +252,11 @@
 .progress-3Rbvu0 {
     background-color: #533688;
 }
-.theme-dark .message-group .mentioned .message-text {
+.theme-dark .isMentioned-N-h9aa {
     background: #322052;
     padding: 2px 2px;
 }
-.message-group .mentioned .message-text:after {
+.theme-dark .isMentioned-N-h9aa:after {
     background: transparent;
     border-left: none;
 }
@@ -431,6 +431,12 @@
 .theme-dark .title-1aVOXw {
     color: white;
 }
+.contentCozy-3XX413 {
+    margin-left: 100px;
+}
+.theme-dark .username-_4ZSMR {
+    margin-left: 20px;
+}
 .theme-dark .iconBadge-2dji3k {
     border-color: black;
     left: 15px;
@@ -438,12 +444,12 @@
     border-radius: 0px;
     background: #5a3a93;
 }
-.theme-dark .message-group .comment .markup pre {
+.theme-dark .markup-2BOw-j pre {
     background: transparent;
     border-color: transparent;
 }
-.theme-dark .message-group .comment .markup code.inline, 
-.theme-dark .message-group .comment .markup pre code {
+.theme-dark .markup-2BOw-j code, 
+.theme-dark .markup-2BOw-j code.inline {
     background: rgba(255,255,255,0.07);
 }
 .theme-dark .hljs {
@@ -483,7 +489,7 @@
     color: #ff7f50;
 }
 
-.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group {
+.theme-dark .messageGroupWrapper-o-Zw7G {
     background-color: black !important;
     border-color: transparent;
 }
@@ -860,7 +866,7 @@ a,
     background: black;
     box-shadow: none;
 }
-.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group:hover .actionButtons-1sUUug
+.theme-dark .messageGroupWrapper-o-Zw7G:hover .actionButtons-1sUUug
  {
     background: none !important;
     box-shadow: none !important;
@@ -870,7 +876,7 @@ a,
  {
     color: white;
 }
-.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .message-group .actionButtons-1sUUug .jumpButton-3DTcS_,
+.theme-dark .messageGroupWrapper-o-Zw7G .actionButtons-1sUUug .jumpButton-3DTcS_,
 .theme-dark .search-results-wrap .action-buttons .jump-button {
     background-color: #503483 !important;
     color: white;
