--- a/Bubble.theme.css
+++ b/Bubble.theme.css
@@ -16,7 +16,7 @@
 .theme-dark .title-3qD0b-,
 .container-PNkimc,
 .container-2lgZY8,
-.guilds-wrapper,
+.theme-dark .guildsWrapper-5TJh6A,
 .theme-dark .chat form,
 .theme-dark .chat>.content,
 .theme-dark .chat,
@@ -38,8 +38,8 @@
 .avatarSpeaking-1wJCNq {
     box-shadow: inset 3px 2px 6px rgba(255,255,255,0.7), inset 0px 0px 6px rgba(255,255,255,0.3);
 }
-.guilds-wrapper .guilds .guild.selected:before,
-.guild.selected.unread:before {
+.theme-dark .guild-1EfMGQ.selected-ML3OIq:before,
+.guild-1EfMGQ.selected.unread-qLkInr:before {
     background: transparent;
     border-radius: 30px;
     box-shadow: inset 3px 6px 6px rgba(255,255,255,0.97), inset 0 0 123px rgba(255,255,255,0.47);
@@ -50,7 +50,7 @@
     z-index: 1;
 }
 
-.guilds-wrapper .guilds .guild.unread:before {
+.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
     background: transparent;
     border-radius: 30px;
     height: 15px;
@@ -68,11 +68,11 @@
     padding-bottom: 12px;
     border-radius: 60px;
 }
-.guilds-wrapper .guilds-add:hover {
+.theme-dark .guildsAdd-21_IdK:hover {
     border: 1px solid black;
     color: black;
 }
-.guilds-wrapper .guilds-add {
+.theme-dark .guildsAdd-21_IdK {
     background: transparent;
     border: 1px dashed black;
     color: black;
@@ -120,20 +120,20 @@
     padding: 5px 9px;
     text-shadow: 0 0 6px rgba(0,0,0,1), 0 0 6px rgba(0,0,0,1);
 }
-.guilds-wrapper .guilds .guild .guild-inner {
+.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
     background: transparent !important;
     border-radius: 25px !important;
 }
-.unread-mentions-indicator-bottom .unread-mentions-bar, 
-.unread-mentions-indicator-top .unread-mentions-bar {
+.unreadMentionsIndicatorBottom-BXS58x .unreadMentionsBar-1VrBNe, 
+.unreadMentionsIndicatorTop-gA6RCh .unreadMentionsBar-1VrBNe {
     box-shadow: none;
     height: 56px;
 }
-.unread-mentions-indicator-bottom, 
-.unread-mentions-indicator-top {
+.unreadMentionsIndicatorBottom-BXS58x, 
+.unreadMentionsIndicatorTop-gA6RCh {
     overflow: visible;
 }
-.unread-mentions-indicator-bottom {
+.unreadMentionsIndicatorBottom-BXS58x {
    margin-bottom: 42px;
 }
 .mention-1f5kbO {
@@ -238,11 +238,11 @@
 .iconUnread-2eGkvX {
     display: none;
 }
-.guilds-wrapper .guilds-error:hover {
+.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
     background-color: rgba(206, 233, 234,0.4); 
     color: black;
 }
-.guilds-wrapper .guilds-error {
+.theme-dark .guildsWrapper-5TJh6A .guilds-error {
     background: transparent;
     border: 2px solid #E7FEFF;
     color: black!important;
@@ -661,10 +661,10 @@ a {
     margin-left: -6px;
 }
 /* Friends and DMs */
-.guilds-wrapper .guild-separator:after {
+.theme-dark .guildSeparator-1X4GQ1:after {
     display: none;
 }
-.guilds-wrapper .guilds .friends-online,
+.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM,
 .theme-dark .emptyStateNote-ZYTetQ {
     color: white;
 }
@@ -1554,7 +1554,7 @@ a {
     border: none;
     box-shadow: inset 7px 12px 9px rgba(255,255,255,0.46), inset 0 0 123px rgba(255,255,255,0.43);
 }
-.search-bar.search-bar-light .search-bar-inner {
+.search-bar-light .searchBarInner-1_Tg2R {
     background-color: transparent;
     border: none;
     box-shadow: inset 7px 4px 9px rgba(255,255,255,0.46), inset 0 0 123px rgba(255,255,255,0.43);
@@ -1645,7 +1645,7 @@ a {
     border-radius: 40px;
     box-shadow: inset 7px 4px 9px rgba(255,255,255,0.86), inset 0 0 123px rgba(255,255,255,0.93);
 }
-.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .emptyPlaceholder-1zh-Eu .body-bvcIjN {
+.theme-dark .messagesPopoutWrap-1MQ1bW .messagesPopout-24nkyi .emptyPlaceholder-1zh-Eu .body-bvcIjN, .themedPopout-25DgLi .header-SsaQ8X .title-23FrqZ  {
     color: white;
     opacity: 1;
 }
