--- a/OldHistory.theme.css
+++ b/OldHistory.theme.css
@@ -9,7 +9,7 @@
 .theme-dark .title-3qD0b-,
 .container-PNkimc,
 .container-2lgZY8,
-.guilds-wrapper,
+.theme-dark .guildsWrapper-5TJh6A,
 .theme-dark .chat form,
 .theme-dark .chat>.content,
 .theme-dark .chat,
@@ -539,15 +539,15 @@ a {
     background-color: rgba(0,0,0,.4);
     color: #fff;
 }
-.guilds-wrapper .guilds .guild .guild-inner {
+.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
     background: #f8bd55 !important;
     border-radius: 0px !important;
 }
-.guilds-wrapper .guilds .friends-online,
+.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM,
 .theme-dark #friends .friends-table .friends-table-header .friends-column {
     color: white;
 }
-.guilds-wrapper .guild-separator:after {
+.theme-dark .guildSeparator-1X4GQ1:after {
     display: none;
 }
 .theme-dark #friends .friends-table .friends-table-header {
@@ -817,13 +817,13 @@ a {
     background-color: #f8bd55;
 }
 
-.guilds-wrapper .guilds-add {
+.theme-dark .guildsAdd-21_IdK {
     background: #f8bd55;
     border: transparent !important; 
     border-radius: 0px;
     color: black;
 }
-.guilds-wrapper .guilds-add:hover {
+.theme-dark .guildsAdd-21_IdK:hover {
     background: #d1aa4c;
     color: black;
 }
@@ -848,10 +848,10 @@ a {
     border-radius: 0px;
     color: black;
 }
-.guilds-wrapper .guilds-error:hover {
+.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
     background: rgba(209, 170, 76,0.4);
 }
-.guilds-wrapper .guilds-error {
+.theme-dark .guildsWrapper-5TJh6A .guilds-error {
     border: none;
     color: black;
     border-radius: 0px;
@@ -986,7 +986,7 @@ a {
     background-color: transparent;
     color: white;
 }
-.search-bar.search-bar-light .search-bar-inner {
+.search-bar-light .searchBarInner-1_Tg2R {
     background-color: rgba(209, 170, 76,0.32);
 }
 .emojiPicker-3m1S-j .categories-1feg4n .item-16cXuq.selected-39BZ4S {
