--- a/TheQuestionMark.theme.css
+++ b/TheQuestionMark.theme.css
@@ -12,7 +12,7 @@
 .container-2lgZY8 {
     background-color:  rgba(0,0,0,0);
 }
-.guilds-wrapper {
+.theme-dark .guildsWrapper-5TJh6A {
     background-color: transparent;
 }
 .theme-dark .chat form {
@@ -798,10 +798,10 @@ a {
     color: white;
 }
 /* Continue Main Screen to DMs */
-.guilds-wrapper .guild-separator:after {
+.theme-dark .guildSeparator-1X4GQ1:after {
     background: #e53b0a;
 }
-.guilds-wrapper .guilds .friends-online {
+.theme-dark .friendsOnline-_wi_fM, .theme-light .friendsOnline-_wi_fM {
     color: white;
 }
 .theme-dark .iconBadge-2dji3k {
@@ -846,7 +846,7 @@ a {
     fill: white;
 }
 
-.guilds-wrapper .guilds .guild .guild-inner {
+.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
     background: black !important;
     border-radius: 25px !important;
     cursor: pointer;
@@ -917,21 +917,21 @@ a {
 .theme-dark .message-group .edit-message .edit-operation,.theme-dark .message-group .comment .edited {
     color: white;
 }
-.guilds-wrapper .guilds .guild .guild-inner a {
+.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 a {
     color: rgb(255, 255, 255);
     height: 50px;
     border-radius: 50px;
     background-color: black;
     width: 50px;
 }
-.guilds-wrapper .guilds-error {
+.theme-dark .guildsWrapper-5TJh6A .guilds-error {
     background: black;
     border: none;
     font-size: 0px;
     border: 2px solid transparent;
     transition: border .3s ease;
 }
-.guilds-wrapper .guilds-error:before {
+.theme-dark .guildsWrapper-5TJh6A .guilds-error:before {
     font-size: 20px;
     content: "?";
     animation: color 2s linear infinite;
@@ -950,16 +950,16 @@ a {
 		color: white;
 	}
 }
-.guilds-wrapper .guilds .home-icon {
+.theme-dark .guildsWrapper-5TJh6A .guilds .home-icon {
     background-color: #e53b0a;
     border-radius: 50px;
 }
 
-.guilds-wrapper .guilds-error:hover {
+.theme-dark .guildsWrapper-5TJh6A .guilds-error:hover {
     background-color: black;
     border: 2px solid #e53b0a;
 }
-.guilds-wrapper .guilds-add {
+.theme-dark .guildsAdd-21_IdK {
     background: black;
     border: 1px dashed #e53b0a;
     color: rgb(83, 85, 89);
@@ -996,7 +996,7 @@ a {
     background-size: 52px,52px;
     color: black
 }
-.guilds-wrapper .guilds-add:hover {
+.theme-dark .guildsAdd-21_IdK:hover {
     border: 2px solid #e53b0a;
     color: white;
     font-size: 30px;
@@ -1034,11 +1034,11 @@ a {
 .tooltip.tooltip-black.tooltip-left:after {
     border-left: none;
 }
-.guilds-wrapper .guilds .guild.unread:before {
+.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
     background: #e53b0a;
     border-radius: 50px;
 }
-.guilds-wrapper .guilds .guild.selected:before {
+.theme-dark .guild-1EfMGQ.selected-ML3OIq:before {
     background: #f7663c;
 }
 .theme-dark .datePicker-1RD4eT .datePickerHint-1iW7Wz {
@@ -1061,8 +1061,8 @@ a {
     color: #e53b0a;
     opacity: 1;
 }
-.guilds-wrapper .guilds .guild.audio .guild-inner:after, 
-.guilds-wrapper .guilds .guild.video .guild-inner:after {
+.theme-dark .guildsWrapper-5TJh6A .guilds .guild.audio .guild-inner:after, 
+.theme-dark .guildsWrapper-5TJh6A .guilds .guild.video .guild-inner:after {
     background-color: black;
     border: 1px solid #e53b0a;
     border-radius: 50px;
@@ -1314,7 +1314,7 @@ a {
 .emote-container:hover {
     background: rgba(229,59,10,0.57);
 }
-.search-bar.search-bar-light .search-bar-inner {
+.search-bar-light .searchBarInner-1_Tg2R {
     background-color: black;
     border: 1px solid #e53b0a;
     border-radius: 0px!important;
@@ -2131,7 +2131,7 @@ a {
 .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
     background-color: black;
 }
-.search-bar.search-bar-light .search-bar-inner {
+.search-bar-light .searchBarInner-1_Tg2R {
     background-color: black;
     border: 1px solid #E53B0A;
     border-radius: 3px!important;
