--- a/Twitch.theme.css
+++ b/Twitch.theme.css
@@ -22,7 +22,7 @@
 .theme-dark .title-3qD0b-,
 .container-PNkimc,
 .container-2lgZY8,
-.guilds-wrapper,
+.theme-dark .guildsWrapper-5TJh6A,
 .theme-dark .chat form,
 .theme-dark .chat>.content,
 .theme-dark .chat,
@@ -150,7 +150,7 @@
     border-radius: 0px;
 }
 
-.guilds-wrapper .guilds .guild.unread:before {
+.theme-dark .guild-1EfMGQ.unread-qLkInr:before {
     border-radius: 0px;
     background-color: #7752ba;
 }
@@ -400,7 +400,7 @@
     padding: 2px 8pc;
     box-shadow: 0 3px 2px black;
 }
-.guilds-wrapper .guilds .guild .guild-inner {
+.theme-dark .guild-1EfMGQ .guildInner-3DSoA4 {
     background: black !important;
     border-radius: 25px !important;
     cursor: pointer;
@@ -1079,7 +1079,7 @@ a,
     border-radius: 0px;
     border: none;
 }
-.search-bar.search-bar-light .search-bar-inner {
+.search-bar-light .searchBarInner-1_Tg2R {
     background-color: #3c2762;
     border: none;
 }
@@ -1266,14 +1266,14 @@ a,
 .searchBar-2pE3BB .search-bar{
     background-color: black;
 }
-.guilds-wrapper .guilds .friends-icon {
+.theme-dark .guildsWrapper-5TJh6A .guilds .friends-icon {
     background-image: url(https://png.icons8.com/ios/40/FFFFFF/speech-bubble.png);
 }
-.guilds-wrapper .guilds .friends-icon {
+.theme-dark .guildsWrapper-5TJh6A .guilds .friends-icon {
     background-color: #6441a4;
 }
 
-.guilds-wrapper .guilds .friends-icon:hover {
+.theme-dark .guildsWrapper-5TJh6A .guilds .friends-icon:hover {
     background-color: #503483 !important;
 }
 .theme-dark #friends .friends-table .friends-table-header,
@@ -1427,10 +1427,10 @@ a,
     box-shadow: none;
     color: silver;
 }
-.guilds-wrapper .guilds-error {
+.theme-dark .guildsWrapper-5TJh6A .guilds-error {
     border-radius: 50px;
 }
-.guilds-wrapper .guilds-add {
+.theme-dark .guildsAdd-21_IdK {
     border-radius: 50px;
     background-color: black;
     border: 2px dashed #503483 !important;
