--- a/BokuNoHeroAcademia.theme.css
+++ b/BokuNoHeroAcademia.theme.css
@@ -1000,7 +1000,7 @@ a {
 .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb {
       background-color: #668B99;
 }
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     background: #668B99;
     border-radius: 0px;
 }
