--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -1391,7 +1391,7 @@ a,
     background: #212121;
 }
 
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     background: #212121;
     border-radius: 0px;
     color: #fff !important;
