--- a/Danganronpa.theme.css
+++ b/Danganronpa.theme.css
@@ -998,7 +998,7 @@ a {
 .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb {
       background-color: #5088A3;
 }
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     background: #5088A3;
     border-radius: 0px;
 }
