--- a/Luigi.theme.css
+++ b/Luigi.theme.css
@@ -682,11 +682,11 @@ a {
 .theme-dark .checked-3_4uQ9 polyline[stroke] {
     stroke: white;
 }
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     background: rgba(40, 121, 14,0.7) /* (Main Color, .4) */;
     box-shadow: inset 0 0 7px rgba(0,0,0,0.6);
 }
-.search-bar-tag .close {
+.searchBarTag-2xRzm8 .close {
     opacity: 1;
 }
 .theme-dark .friendSelected--wQP3f {
