--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -194,7 +194,7 @@ a,
     border: none;
     border-radius: 10px;
 }
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     background: #4F1C4F;
     border-radius: 10px;
 }
