--- a/OldHistory.theme.css
+++ b/OldHistory.theme.css
@@ -579,7 +579,7 @@ a {
 .search-bar .search-bar-inner {
     background: rgba(0,0,0,.5);
 }
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     background: #d1aa4c;
     color: black;
 }
