--- a/TheQuestionMark.theme.css
+++ b/TheQuestionMark.theme.css
@@ -1580,7 +1580,7 @@ a {
 .topSectionXbox-3fWLjS {
     background: rgba(76, 175, 80,0.4);
 }
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     border-radius: 2px;
     color: rgb(255, 255, 255);
     border: 1px solid orange;
