--- a/Thunderstorm.theme.css
+++ b/Thunderstorm.theme.css
@@ -992,7 +992,7 @@ a {
 .theme-light .scrollerThemed-2oenus.themeDark-2cjlUp .scroller-2FKFPG::-webkit-scrollbar-thumb {
       background-color: #272729;
 }
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     background: #272729;
     border-radius: 0px;
 }
