--- a/TouhouKnowledge.theme.css
+++ b/TouhouKnowledge.theme.css
@@ -890,7 +890,7 @@ a,
     padding-right: 6px;
     border-left: none;
 }
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     border: 1px solid #705435;
     border-radius: 0px;
     background-color: transparent;
