--- a/Twitch.theme.css
+++ b/Twitch.theme.css
@@ -1391,7 +1391,7 @@ a,
     background: linear-gradient(90deg,black 85%,#6441a4);
 }
 
-.search-bar-tag {
+.searchBarTag-2xRzm8 {
     background: black;
     border-radius: 0px;
     border: 1px solid #6441a4;
