--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -1902,6 +1902,11 @@ text-shadow: 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px
     margin-left: 10px;
     text-shadow: 0 0 9px black, 0 0 9px black, 0 0 9px black, 0 0 9px black;
 }
+.theme-dark .actionButton-VzECiy {
+    border-color: transparent;
+    color: white;
+    background-color: transparent;
+}
 .connectedAccountOpenIcon-2cNbq5 {
     background-image: url(https://www.shareicon.net/download/2015/08/26/91266_open_512x512.png);
     background-size: cover;
@@ -1955,6 +1960,7 @@ text-shadow: 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px black, 0 0 6px
     background-color: #713aa8;
     color: #f6f6f7;
 }
+
 .theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6:hover {
     background-color: #4f2876;
 }
